--- a/sources/jvcd2-topiclist.css
+++ b/sources/jvcd2-topiclist.css
@@ -33,7 +33,7 @@ span.topic-author,
 
 .topic-list li:nth-of-type(2n)
 {
-    background: var(--jvcd-background-secondary);
+    background: var(--jvcd-background-secondary) !important;
     color: var(--jvcd-text-normal);
     font-family: Whitney;
     font-size: 13px !important;
@@ -41,7 +41,7 @@ span.topic-author,
 
 .topic-list li:nth-of-type(2n+1)
 {
-    background: var(--jvcd-background-tertiary);
+    background: var(--jvcd-background-tertiary) !important;
     color: var(--jvcd-text-normal);
     font-family: Whitney;
     font-size: 13px !important;
